# PyDFCat

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
src/: __main__.py  maineditor.py  settings.py  sidepanel.py  toolbar.py  widgets.py  window.py
src/pydfcat/: __init__.py  __main__.py  importWIndow.py  journal.py  loadingWindow.py  maineditor.py  settings.py  sidepanel.py  toolbar.py  widgets.py  window.py
src/pydfcat/assets/: LICENSES  ctktheme.json
