[metadata]
name = pydfcat
version = 0.1.0-dev.4
author = 3ricsonn
author_email = 3ricsonn@protonmail.com
description = A Python-based PDF Editor (Under Development)
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business :: Office Suites
    Topic :: Multimedia :: Graphics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.11
install_requires =
    crossfiledialog>=0.1.2
    CTkMessagebox>=2.4
    customtkinter>=5.2.0
    Pillow>=10.0.0
    PyMuPDF>=1.22.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    pydfcat = pydfcat:start

[tool.black]
line-length = 100
target-version = ['py311']

[flake8]
max-line-length = 100
extend-ignore = E203
